update info 1 and 2

--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -31,8 +31,25 @@
                 <input type="email" id="email" name="email" required><br><br>
                 <label for="phone_number">Phone Number*</label>
                 <input type="tel" id="phone_number" name="phone_number" required><br><br>
+                
                 <label for="registration_code">Registration Code*</label>
                 <input type="text" id="registration_code" name="registration_code" required><br><br>
+                
+                <h3>Address Information</h3>
+                <label for="address_line1">Address Line 1*</label>
+                <input type="text" id="address_line1" name="address_line1" required><br><br>
+                
+                <label for="address_line2">Address Line 2 (Optional)</label>
+                <input type="text" id="address_line2" name="address_line2"><br><br>
+                
+                <label for="city">City*</label>
+                <input type="text" id="city" name="city" required><br><br>
+                
+                <label for="state">State*</label>
+                <input type="text" id="state" name="state" required><br><br>
+                
+                <label for="zip_code">ZIP Code*</label>
+                <input type="text" id="zip_code" name="zip_code" required><br><br>
                 <button type="submit">Create Account</button>
             </form>
             <div id="create-account-output"></div>
