change website's name

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>PAS 2.0 - Dashboard</title>
+    <title>Confident Moves Intervention - Dashboard</title>
     <link rel="stylesheet" href="{% static 'styles.css' %}">
     <style>
         body {
@@ -268,7 +268,7 @@
         <!-- Header -->
         <div class="header">
             <div>
-                <h1>PAS 2.0 Dashboard</h1>
+                <h1>Confident Moves Intervention Dashboard</h1>
                 <p style="margin: 0.5rem 0 0 0; color: #666;">Welcome back, {{ user.username }}!</p>
             </div>
             <div class="user-info">
@@ -456,7 +456,7 @@
     </div>
 
     <div class="footer">
-        <p>&copy; Physical Activity Self-efficacy (PAS) Intervention 2.0. All rights reserved.</p>
+        <p>&copy; Confident Moves Intervention. All rights reserved.</p>
     </div>
 </body>
 </html>
