--- a/templates/enter_wave_3_code.html
+++ b/templates/enter_wave_3_code.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PAS 2.0 - Enter Wave 3 Physical Activity Code</title>
+    <title>Confident Moves Intervention - Enter Wave 3 Physical Activity Code</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
