--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
     <div id="questionnaire-output"></div>
 
     <footer>
-        <p>&copy; Physical Activity Self-efficacy (PAS) Intervention 2.0. All rights reserved.</p>
+        <p>&copy; Confident Moves Intervention. All rights reserved.</p>
     </footer>
 
     <script>
