--- a/templates/intervention_access.html
+++ b/templates/intervention_access.html
@@ -213,7 +213,7 @@
     </div>
 
     <div style="text-align:center; color: white; margin-top: 1rem; padding-bottom: 2rem;">
-        <p style="margin:0.5rem 0; opacity:0.9;">&copy; Physical Activity Self-efficacy (PAS) Intervention 2.0. All rights reserved.</p>
+        <p style="margin:0.5rem 0; opacity:0.9;">&copy; Confident Moves Intervention. All rights reserved.</p>
     </div>
 
     <script>
