--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to PAS Intervention</h1>
+        <h1>Welcome to Confident Moves Intervention</h1>
     </header>
     
     <main>
@@ -29,7 +29,7 @@
     </main>
 
     <footer>
-        <p>&copy; Physical Activity Self-efficacy (PAS) Intervention 2.0. All rights reserved.</p>
+        <p>&copy; Confident Moves Intervention. All rights reserved.</p>
     </footer>
 </body>
 </html>
