--- a/templates/create_account_backup.html
+++ b/templates/create_account_backup.html
@@ -50,7 +50,7 @@
     </main>
 
     <footer>
-        <p>© Physical Activity Self-efficacy (PAS) Intervention 2.0. All rights reserved.</p>
+        <p>© Confident Moves Intervention. All rights reserved.</p>
     </footer>
 
     <script>
