--- a/templates/daily_log.html
+++ b/templates/daily_log.html
@@ -66,7 +66,7 @@
 
         <footer>
             <p>If you need assistance, contact Seungmin Lee at svu23@iastate.edu or 517-898-0020.</p>
-            <p>&copy; Physical Activity Self-efficacy (PAS) Intervention 2.0. All rights reserved.</p>
+            <p>&copy; Confident Moves Intervention. All rights reserved.</p>
         </footer>
     </div>
 
