--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -36,7 +36,7 @@
     </main>
 
     <footer>
-        <p>&copy; Physical Activity Self-efficacy (PAS) Intervention 2.0. All rights reserved.</p>
+        <p>&copy; Confident Moves Intervention. All rights reserved.</p>
     </footer>
 </body>
 </html> 
