--- a/templates/exit_screen_not_interested.html
+++ b/templates/exit_screen_not_interested.html
@@ -14,12 +14,16 @@
     
     <main>
         <section id="exit-screen-not-interested">
-            <h2>We Appreciate Your Time</h2>
+            <h2>Thank You for Your Interest</h2>
             <p>
-                You have chosen not to participate in the eligibility questionnaire. We appreciate your interest and time spent with us.
+                Unfortunately, we are unable to enroll you at this time. Thank you for taking the time to learn more about the study.
             </p>
             <p>
-                If you have any questions or if you would like to know more about future opportunities, please feel free to contact us.
+                If you need any assistance or have any questions at any time, please contact Seungmin ("Seung") Lee (Principal Investigator) at <a href="mailto:svu23@iastate.edu">svu23@iastate.edu</a> or <a href="tel:517-898-0020">517-898-0020</a>.
+            </p>
+            <p>
+                Sincerely,<br><br>
+                The Confident Moves Research Team
             </p>
             <a href="/">Return to Home Page</a>
         </section>
